@@ -1,3 +1,7 @@
+HEAD
+	+ Ask for trace object to non-handled EBox::Exceptions::Base
+	  exceptions in the UnhandledError middleware. This will gives us
+	  useful stack traces.
 3.4
 	+ When requesting from type a non-existing value use acquirer
 	  if it is a volatile type
